--- a/_config.yml
+++ b/_config.yml
@@ -134,18 +134,29 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
-
+#page-col: "#FFFFFF"
+#text-col: "#404040"
+#link-col: "#008AFF"
+#hover-col: "#0085A1"
+#navbar-col: "#EAEAEA"
+#navbar-text-col: "#404040"
+#navbar-border-col: "#DDDDDD"
+#footer-col: "#EAEAEA"
+#footer-text-col: "#777777"
+#footer-link-col: "#404040"
+#footer-hover-col: "#0085A1"
+#Dark mode
+page-col: "#121212"
+text-col: "#E0E0E0"
+link-col: "#FFD700"
+hover-col: "#FFC107"
+navbar-col: "#1F1F1F"
+navbar-text-col: "#E0E0E0"
+navbar-border-col: "#333333"
+footer-col: "#1A1A1A"
+footer-text-col: "#AAAAAA"
+footer-link-col: "#FFD700"
+footer-hover-col: "#FFC107"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
