--- a/_config.yml
+++ b/_config.yml
@@ -48,17 +48,17 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "elektroedde@gmail.com"
   rss: true # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-  whatsapp: 15551212
-#  medium: yourname
-#  reddit: yourname or r/yoursubreddit
-#  linkedin: daattali
+  #  facebook: deanattali
+  github: elektroedde
+  #  twitter: daattali
+  #  patreon: DeanAttali
+  youtube: "@elektroedde"
+  #  whatsapp: 15551212
+  #  medium: yourname
+  #  reddit: yourname or r/yoursubreddit
+  linkedin: edvin-b-ba9217361/
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
