--- a/_config.yml
+++ b/_config.yml
@@ -150,13 +150,14 @@ page-col: "#121212"
 text-col: "#E0E0E0"
 link-col: "#FFD700"
 hover-col: "#FFC107"
+title-col: "#FFC107"
 navbar-col: "#1F1F1F"
 navbar-text-col: "#E0E0E0"
 navbar-border-col: "#333333"
 footer-col: "#1A1A1A"
 footer-text-col: "#AAAAAA"
-footer-link-col: "#FFD700"
-footer-hover-col: "#FFC107"
+footer-link-col: "#FFC107"
+footer-hover-col: "#FFD700"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
